fix ranking z-index

--- a/src/components/ranking/styles.scss
+++ b/src/components/ranking/styles.scss
@@ -49,7 +49,7 @@
 }
 
 .ranking-button {
-    z-index: 1;
+    z-index: 2;
     background: $gold;
     padding: 5px 0px;
     border-radius: 0 10px 0 0;
@@ -100,6 +100,7 @@
     border: $gold 2px solid;
     margin-top: 10px;
     opacity: 1;
+    z-index: 1;
 
     h4 {
         display: flex;
